--- a/updatedportfolio.css
+++ b/updatedportfolio.css
@@ -267,6 +267,10 @@ svg:hover{
     font-size: 3rem;
   }
 
+  .skills{
+    margin: 0 2rem;
+  }
+
   .skills h2 {
     font-size: 2.6rem;
   }
@@ -275,13 +279,26 @@ svg:hover{
     font-size: 1.2rem;
   }
 
+  .frontend, .backend{
+    gap: 2rem;
+  }
+
   svg{
    margin-top: 10px;
    width: 3rem;
   }
 
+  .project-section {
+    padding: 2rem 1rem;
+  }
+
   .project-section-header {
     font-size: 2.5rem;
+  }
+
+  .contact-section {
+    padding: 1rem;
+    margin-top: 2rem;
   }
 
   .contact-section-header h1 {
@@ -303,6 +320,18 @@ svg:hover{
     font-size: 2.5rem;
   }
 
+  .skills {
+    margin: 0;
+  }
+
+  .frontend, .backend {
+    gap: 1rem;
+  }
+
+  svg{
+    width: 3rem;
+  }
+
   .skills h2 {
     font-size: 2rem;
   }
@@ -311,8 +340,17 @@ svg:hover{
     font-size: 1rem;
   }
 
+  .project-section {
+    padding: 1rem;
+  }
+
   .project-section-header {
     font-size: 2rem;
+  }
+
+  .contact-section {
+    padding: 1rem;
+    margin-top: 2rem;
   }
 
   .contact-section-header h1 {
